# MTGA_Companion_App

./: .gitignore  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
docs/: benchmark_replay_checkpoint.json  benchmark_report.json  code-signing.md  collection-gate-decision.md  collection-spike-report-v1.1.md  collection-spike-report.md  distribution-notes.md  installer-validation-checklist.md  installer-validation-results.md  issue-close-evidence-template.md  packaging-mode-decision.md  parsing-notes.md  performance-baseline.md  post-release-smoke-v1.0.1.md  post-release-smoke-v1.1.0.md  regression-diff-sample.md  release-checklist.md  release-notes-v1.0.1.md  release-notes-v1.1.0.md  release-notes-v1.2.0.md  release-notes-v1.3.0.md  release-notes-v1.4.0.md  release-notes.md  release-rollback-runbook.md  release-scope-note.md  release-version-contract.md
fixtures/: README.md  manifest.json
scripts/: benchmark_db.py  benchmark_replay_checkpoint.py  build_cards_db.py  db_maintenance.py  golden_harness.py  package_release.ps1  post_release_smoke.ps1  publish_release.ps1  sanitize_logs.py  sign_artifacts.ps1  verify_branch_protection.py  verify_release_notes_tag.py  verify_release_version_sync.py
tests/: test_branch_protection_smoke.py  test_cards_asset.py  test_collection_exports.py  test_collection_parser.py  test_collection_service.py  test_collection_ui.py  test_db_maintenance.py  test_diagnostics_timeline.py  test_export_service.py  test_fixture_manifest.py  test_golden_harness.py  test_ingest_service.py  test_log_discovery.py  test_logging_health.py  (+14 more)
(+64 files in other folders)
